--- a/hardware-store-api-service/src/main/resources/application.properties
+++ b/hardware-store-api-service/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
+spring.jackson.parser.allow-numeric-leading-zeros=true
+
 jwt.issuer=hardware-store
 jwt.secret=secret
