--- a/hardware-store-api-service/src/test/resources/application.properties
+++ b/hardware-store-api-service/src/test/resources/application.properties
@@ -10,5 +10,7 @@
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 
+spring.jackson.parser.allow-numeric-leading-zeros=true
+
 jwt.issuer=hardware-store
 jwt.secret=secret
